--- a/public/assets/css/custom/dashboard.css
+++ b/public/assets/css/custom/dashboard.css
@@ -117,8 +117,8 @@
 }
 .vs-dashboard-table thead th,
 .vs-dashboard-table tbody td {
-  overflow: visible;
-  text-overflow: clip;
+  overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
 }
 
@@ -156,13 +156,13 @@
     width: 0;
   }
   .vs-dashboard-table th:nth-child(2) {
-    width: 10%;
+    width: 20%;
   }
   .vs-dashboard-table th:nth-child(3) {
-    width: 24%;
+    width: 22%;
   }
   .vs-dashboard-table th:nth-child(4) {
-    width: 34%;
+    width: 26%;
   }
   .vs-dashboard-table th:nth-child(5) {
     width: 14%;
